updated documentation for button

--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -274,7 +274,7 @@
       </table>
       <h3 id="kbd_label_button">Button</h3>
       <p>
-        The button has been removed from the tab sequence of the page, but is still focusable by assistive technologies.  The button is especially important for supporting assistive tehcnologies for mobile devices that use touch events to open the list of options.
+        The button has been removed from the tab sequence of the page, but is still important to assistive technologies for mobile devices that use touch events to open the list of options.
       </p>
     </section>
 
