fixed unclosed section bug

--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -428,6 +428,8 @@
           </tr>
         </tbody>
       </table>
+    </section>
+
     <section>
       <h2>Javascript and CSS Source Code</h2>
       <ul>
