--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -480,6 +480,8 @@
           </tr>
         </tbody>
       </table>
+    </section>
+
     <section>
       <h2>Javascript and CSS Source Code</h2>
       <ul>
