updated css for high contrast support

--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -56,7 +56,8 @@
             <button id="cb1-button" tabindex="-1"  aria-label="States" aria-expanded="false" aria-controls="cb1-listbox">
               <span class="arrow">
                 <svg width="18" height="16" aria-hidden="true" focusable="false">
-                  <polygon points="3,5 15,5 9,13"></polygon>
+                  <polygon class="outline" points="1,4 17,4 9,15"></polygon>
+                  <polygon class="arrow" points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
             </button>
