--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -55,7 +55,8 @@
             <button type="button" id="cb1-button" aria-label="States" aria-expanded="false" aria-controls="cb1-listbox" tabindex="-1">
               <span class="arrow">
                 <svg width="18" height="16" aria-hidden="true" focusable="false">
-                  <polygon points="3,5 15,5 9,13"></polygon>
+                  <polygon class="outline" points="1,4 17,4 9,15"></polygon>
+                  <polygon class="arrow" points="3,5 15,5 9,13"></polygon>
                 </svg>
               </span>
             </button>
