delete extra word

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6222,7 +6222,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
       <ul>
         <li><code>true</code>: the element is supports being checked and is checked.</li>
 
-        <li><code>false</code>: the element is supports being checked but is not checked.</li>
+        <li><code>false</code>: the element supports being checked but is not checked.</li>
 
         <li><code>mixed</code>: the element is supports being checked and is in the mixed state for a tri-state checkbox.</li>
 
