--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6220,7 +6220,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
       </p>
 
       <ul>
-        <li><code>true</code>: the element is supports being checked and is checked.</li>
+        <li><code>true</code>: the element supports being checked and is checked.</li>
 
         <li><code>false</code>: the element supports being checked but is not checked.</li>
 
