--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -75,7 +75,7 @@
       <section>
         <h2>Example View Options</h2>
         <ul>
-          <li><a id="accessible" href="carousel-2-tablist.html">Tablist carousel controls and captions displayed on image</a>: This option is less accessible than the following option because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
+          <li><a id="accessible" href="carousel-2-tablist.html">Tablist carousel controls and captions displayed on image</a>: This option is less accessible than the following options because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
           <li><a id="moreaccessible" href="carousel-2-tablist.html?moreaccessible">Tablist carousel controls and captions displayed above and below the image</a>: This option is preferable because controls and captions are easier to perceive, especially for people with visual impairments.</li>
           <li><a id="moreaccessiblepaused" href="carousel-2-tablist.html?moreaccessiblepaused">Auto-rotation is initially paused</a>: This option improves accessibility for users with visual impairments and people who are distracted by auto-rotation, but allows users to start auto-rotation using the start/stop button.</li>
           <li><a id="moreaccessiblenoplay" href="carousel-2-tablist.html?moreaccessiblenoplay">Auto-rotation is disabled</a>: This option improves accessibility for users with visual impairments and people who are distracted by auto-rotation by disabling the auto-rotation feature and removing the start/stop button from the user interface.  Users can use the tablist to manually navigate through the slides.</li>
