Minor editorial revision to tabindex documentation for the button

--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -450,7 +450,7 @@
               <code>tabindex="-1"</code>
             </th>
             <td><code>button</code></td>
-            <td>Removes the button from the tab sequence of the page, since it's keyboard function is redundant with the keyboard operation of the textbox to open the listbox.</td>
+            <td>Removes the button from the tab sequence of the page because its function is redundant with the keyboard operation of the combobox.</td>
           </tr>
           <tr data-test-id="button-aria-label">
             <td></td>
